--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="/style.css" />
-        <link rel="stylesheet" type="text/css" href="/index.css" />
-        <link rel="icon" href="/img/logo.png">
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="index.css" />
+        <link rel="icon" href="img/logo.png">
         <title>FE-Developer Test</title>
     </head>
     <body>
@@ -24,7 +24,7 @@
                i recently interviews Steffen Geldner - talented iphone photographer with a passion for travel. In this article Steffen reveals 7 tips for shooting 
                beautiful travel photos that will preserve the amazing memory of your trip. Read on to discover how better travel photos with your iphone!
             </p><br>
-            <img src= "/images/travel-photos.png"/>
+            <img src= "images/travel-photos.png"/>
             <h2 class="blog-body__blog-h1"><br>1. Reasearch Your Destination To Find The Best Photo Opportunities</h2>
             <p class="blog-p1">Befor the trip i recommend researching the destination to find the most innteresting photo opportunities<br><br>
               i always reasearch the location i'm travelling to. I do this extensively and obessively!<br><br>
@@ -53,7 +53,7 @@
         <div id="overlay" onclick="off()">
           <div id="text">
             <p class="steps">Step 1 of 2</p>
-            <img  src="/images/×.png" class="images" onclick="off()"/>
+            <img  src="images/×.png" class="images" onclick="off()"/>
             <div class="borders"></div>
             <h3 class="email">Enter your email to get free iphone photography Email Tips</h3>
               <form class="test">
